envoyfilter-teaching/envoyfilter/bootstrap/ef-bootstrap-admin-ingressgateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: EnvoyFilter
metadata:
  name: ef-bootstrap
spec:
  workloadSelector:
    labels:
      istio: ingressgateway
  configPatches:
  - applyTo: BOOTSTRAP
    patch:
      operation: MERGE
      value:
          admin: 
            access_log:
            - name: file
              filter:
                status_code_filter:
                  comparison:
                    op: EQ
                    value:
                      default_value: 200 
                      runtime_key: file.log
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.access_loggers.file.v3.FileAccessLog
                path: /dev/null
                log_format: 
                  text_format: "%LOCAL_REPLY_BODY%:%RESPONSE_CODE%:path=%REQ(:path)%\n"
            profile_path: "/var/lib/istio/data/envoy.prof"
            ignore_global_conn_limit: true
            address:
              socket_address: 
                address: "127.0.0.1"
                port_value: 15000
